# AstrBot_WebManager

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
deploy/: astrbot-launcher.service  install_debian.sh  package_release.sh  setup_vm.sh
src/: App.css  App.tsx  antdStatic.ts  api.ts  main.tsx  mock.ts
src-tauri/: Cargo.toml
src-tauri/src/: backup.rs  commands.rs  config.rs  download.rs  error.rs  file_manager.rs  github.rs  lib.rs  main.rs  network_config.rs  platform.rs  runtime.rs  setup.rs  validation.rs
src-tauri/src/archive/: extract.rs  links.rs  mod.rs  path.rs  tar_gz.rs  zip_ops.rs
src-tauri/src/component/: common.rs  mod.rs  node_shim.rs  nodejs.rs  python.rs  registry.rs  types.rs  uv.rs
src-tauri/src/instance/: cleanup.rs  crud.rs  deploy.rs  lifecycle.rs  mod.rs  rebuild.rs  types.rs
src-tauri/src/migration/: component_python.rs  config_manifest.rs  mod.rs
src-tauri/src/process/: control.rs  libc_api.rs  manager.rs  mod.rs  monitor.rs  win_api.rs
src-tauri/src/utils/: archive_path.rs  index_url.rs  lock_check.rs  log_bus.rs  mod.rs  net.rs  paths.rs  proxy.rs  sync.rs  sys_proxy.rs  validation.rs
tools/: .env.example  check_107.py  deploy_backend.py  deploy_bin_107.py  deploy_fe.py  deploy_nginx.py  deploy_verify.py  do_reset.py  install_rust.py  install_rust_sync.py  lnk_parse.py  reset2000.py  reset_xiaoyu_pwd.py  ssh_run.py  start_build.py  start_install.py  test_downloads.py  test_start_107.py  upload_rebuild.py  upload_src.py  verify2.py  verify_sse.py  wait_build.py  (+1 more)
(+44 files in other folders)
