[package]
name = "astrbot-launcher"
version = "0.1.0"
description = "AstrBot instance manager (headless HTTP mode)"
authors = ["Raven95676 <raven95676@gmail.com>"]
edition = "2021"

[lib]
# The `_lib` suffix makes the lib name unique and avoids clashing with the bin
# name on Windows (see https://github.com/rust-lang/cargo/issues/8519).
name = "astrbot_launcher_lib"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.11"
reqwest = { version = "0.13.2", features = ["json", "stream", "socks"] }
dirs = "6.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "time",
    "process",
    "io-util",
    "macros",
    "sync",
    "signal",
] }
flate2 = "1.1.9"
chrono = { version = "0.4.43", features = ["serde"] }
tar = "0.4.46"
zip = "8.1.0"
log = "0.4.29"
futures-util = "0.3.31"
portpicker = "0.1.1"
walkdir = "2.5.0"
semver = "1"
redb = { version = "3.1.1", features = ["uuid"] }
once_cell = "1.21.4"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
fern = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libc = "0.2.182"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "unwind"
strip = true
